tests/run-pass/typeck/nested-return.rs
fn foo() -> int {
    if 2 + 3 == 7 {
        return 2;
    } else {
        return 7;
    };
}


fn main() {
    let a: int = foo();
}